# MNN

./: CMakeLists.txt
apps/Android/MnnLlmChat/app/src/main/assets/: model_market.json
apps/Android/MnnLlmChat/app/src/main/cpp/: CMakeLists.txt  ocr_jni.cpp  ocr_session.cpp  ocr_session.h
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/chat/: ChatPresenter.kt  ChatRouter.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/chat/input/: ChatInputComponent.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/llm/: ChatService.kt  OcrSession.kt
apps/Android/MnnLlmChat/app/src/main/java/com/alibaba/mnnllm/android/model/: Modality.kt  ModelTypeUtils.kt  ModelUtils.kt
apps/Android/MnnLlmChat/app/src/main/res/values/: strings.xml
apps/Android/MnnLlmChat/app/src/main/res/values-zh-rCN/: strings.xml
apps/Android/MnnLlmChat/app/src/main/res/values-zh-rTW/: strings.xml
project/android/: build_64.sh
transformers/ocr/engine/: CMakeLists.txt  README.md  ocr_demo.cpp
transformers/ocr/engine/include/ocr/: ocr.hpp
transformers/ocr/engine/model_repo_template/: ocr_config.medium.json  ocr_config.small.json  ocr_config.tiny.json
transformers/ocr/engine/src/: ocr.cpp
transformers/ocr/engine/tools/: ppocr_oracle.py
